consistent naming (crawlStarted, crawlFinished)